--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,39 @@
+# Ignorar directorios de dependencias
+node_modules/
+client/node_modules/
+server/node_modules/
+
+# Ignorar archivos de entorno (SEGURIDAD)
+.env
+client/.env
+server/.env
+
+# Ignorar directorios de compilación/salida
+build/
+client/build/
+client/dist/ # Si Vite usa 'dist' para la salida del frontend
+server/dist/ # Si tu backend se compila a 'dist'
+public/ # A veces es la carpeta de salida
+
+# Logs y caches varios
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store # macOS specific
+Thumbs.db # Windows specific
+*.log
+*.temp
+.cache/
+
+# Archivos específicos de Replit que no necesitas
+.replit
+replit.nix
+.python_packages/
+
 node_modules
 dist
 .DS_Store
 server/public
 vite.config.ts.*
 *.tar.gz
+client/.env
